tests/snapshots/run_wpt_conformance__litert_lesser_float16_broadcast_4D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser float16 broadcast 4D to 4D",
    "litert",
    "PASS",
)
